<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.globant.imdb.model.loginFragment.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/imdb_yellow">

            <TextView
                android:id="@+id/imdb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/imbd_title"
                android:textColor="@color/black"
                android:textSize="80sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                style="@style/login_label_style"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imdb_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_frame_input"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintEnabled="false"
                app:isEmailValid="@{viewModel.isEmailValid}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_light_italic"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password"
                style="@style/login_label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_frame_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_frame_input"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintEnabled="false"
                app:isPasswordValid="@{viewModel.isPasswordValid}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_light_italic"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_light_italic"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_frame_input" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/imdb_black"
                android:enabled="@{viewModel.areInputsValid}"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

            <TextView
                android:id="@+id/login_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_light_italic"
                android:text="@string/login_options_button"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <ImageView
                android:id="@+id/apple_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/contentdesc_apple_icon"
                app:layout_constraintEnd_toStartOf="@+id/facebook_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_options"
                app:srcCompat="@mipmap/apple_icon_round" />

            <ImageView
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentdesc_facebook_icon"
                app:layout_constraintBottom_toBottomOf="@+id/apple_login"
                app:layout_constraintEnd_toStartOf="@+id/google_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/apple_login"
                app:layout_constraintTop_toTopOf="@+id/apple_login"
                app:srcCompat="@mipmap/facebook_icon_round" />

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentdesc_google_icon"
                app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/facebook_login"
                app:layout_constraintTop_toTopOf="@+id/facebook_login"
                app:srcCompat="@mipmap/google_icon_round" />

            <TextView
                android:id="@+id/question_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_light_italic"
                android:text="@string/question_registration_option"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apple_login" />

            <TextView
                android:id="@+id/guest_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/roboto"
                android:text="@string/guest_option"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_registration" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
